# ha-sydpower

./: README.md  hacs.json
.claude/: settings.local.json
apk_analysis/: fetch_catalog.py
components/fbot/: fbot.cpp
components/fbot_rescue/: fbot_rescue.cpp
custom_components/fbot/: __init__.py  binary_sensor.py  catalog.py  config_flow.py  const.py  coordinator.py  manifest.json  number.py  select.py  sensor.py  strings.json  switch.py
custom_components/sydpower/: __init__.py  binary_sensor.py  catalog.py  config_flow.py  const.py  coordinator.py  manifest.json  sensor.py  strings.json
internals/: README.md
internals/pulseview/: notes.txt
sydpower/: .gitignore  .pypirc  CHANGES.md  DEVELOP.md  LICENSE  Makefile  README.md  __init__.py  catalog.py  cli.py  constants.py  device.py  exceptions.py  product_catalog.json  protocol.py  pyproject.toml  requirements.txt  scanner.py  setup.py
sydpower/scripts/: publish.sh
sydpower/tests/: __init__.py  test_sydpower.py
